tests/tests/errors/2014-13.vb
'#compiler-options:/res:name,filename,xxx
'#compiler-message:Command line error BC2014 : the value 'xxx' is invalid for option 'res'
'#exit-code:1